; ModuleID = '/home/carl/AnghaBench/libgit2/tests/worktree/extr_bare.c_test_worktree_bare__repository_path.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/worktree/extr_bare.c_test_worktree_bare__repository_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [5 x i8] c"name\00", align 1
@WORKTREE_REPO = common dso_local global i32 0, align 4
@COMMON_REPO = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c"worktrees\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_worktree_bare__repository_path() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = load i32*, i32** @g_repo, align 8
  %4 = load i32, i32* @WORKTREE_REPO, align 4
  %5 = call i32 @git_worktree_add(i32** %1, i32* %3, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %4, i32* null)
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 @git_worktree_path(i32* %7)
  %9 = load i32, i32* @WORKTREE_REPO, align 4
  %10 = call i32 (i32, i32, i8*, ...) @cl_git_sandbox_path(i32 0, i32 %9, i8* null)
  %11 = call i32 @cl_assert_equal_s(i32 %8, i32 %10)
  %12 = load i32, i32* @WORKTREE_REPO, align 4
  %13 = call i32 @git_repository_open(i32** %2, i32 %12)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @git_repository_path(i32* %15)
  %17 = load i32, i32* @COMMON_REPO, align 4
  %18 = call i32 (i32, i32, i8*, ...) @cl_git_sandbox_path(i32 1, i32 %17, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* null)
  %19 = call i32 @cl_assert_equal_s(i32 %16, i32 %18)
  %20 = load i32*, i32** @g_repo, align 8
  %21 = call i32 @git_repository_commondir(i32* %20)
  %22 = load i32*, i32** %2, align 8
  %23 = call i32 @git_repository_commondir(i32* %22)
  %24 = call i32 @cl_assert_equal_s(i32 %21, i32 %23)
  %25 = load i32*, i32** %2, align 8
  %26 = call i32 @git_repository_workdir(i32* %25)
  %27 = load i32, i32* @WORKTREE_REPO, align 4
  %28 = call i32 (i32, i32, i8*, ...) @cl_git_sandbox_path(i32 1, i32 %27, i8* null)
  %29 = call i32 @cl_assert_equal_s(i32 %26, i32 %28)
  %30 = load i32*, i32** %2, align 8
  %31 = call i32 @git_repository_free(i32* %30)
  %32 = load i32*, i32** %1, align 8
  %33 = call i32 @git_worktree_free(i32* %32)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_worktree_add(i32**, i32*, i8*, i32, i32*) #1

declare dso_local i32 @cl_assert_equal_s(i32, i32) #1

declare dso_local i32 @git_worktree_path(i32*) #1

declare dso_local i32 @cl_git_sandbox_path(i32, i32, i8*, ...) #1

declare dso_local i32 @git_repository_open(i32**, i32) #1

declare dso_local i32 @git_repository_path(i32*) #1

declare dso_local i32 @git_repository_commondir(i32*) #1

declare dso_local i32 @git_repository_workdir(i32*) #1

declare dso_local i32 @git_repository_free(i32*) #1

declare dso_local i32 @git_worktree_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
